<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TextChange</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">Textbook Search</string>
    <string name="title_activity_post">Textbook Post Ad</string>
    <string name="title_activity_profile">Profile</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="postad">Post Ad</string>
    <string name="narrow_search">Narrow your search</string>
    <string name="post_ad_title">Post A TextBook Ad</string>
    <string name="narrow_search_msg">Enter some or all of the fields below to narrow your search.</string>
    <string name="postad_msg">Enter some or all of the fields to specify the type of textbook.</string>
	<string name="edit_book_title">	Enter Book Title</string>
	<string name="edit_book_author">	Enter Book Author</string>
	<string name="edit_book_isbn">	Enter Book ISBN</string>
	<string name="edit_book_edition">	Enter Edition</string>
	<string name="edit_price"> Price ($)</string>
	<string name="select_dept_msg">Select a department and/or course.</string>
	<string name="dept_msg">Department</string>
	<string name="course_msg">Course</string>
	<string name="register_req">Registration Required!</string>
	<string name="register_req_msg">In order to post your own textbook ads you need to register a TextChange account.</string>
	<string name="dontworry_msg">Don\'t worry it takes less than a minute.</string>
	<string name="signup_msg">Sign up for a TextChange Account</string>
	<string name="login_msg">Login with an existing account</string>
    
    <string name="register_reg_title">Register a TextChange account</string>
	<string name="register_reg_msg">You need an account in order to post your own textbook ads</string>
	<string name="register_email_req">Email (Required)</string>
	<string name="register_name_req">Name (Required)</string>
	<string name="register_phone_num">Phone number</string>
	<string name="register_pass">Password (Required)</string>
	<string name="register_pass_re">Re-enter Password</string>
	<string name="register_reg">Register</string>
	<string name="login_title">Login with an existing account</string>
	<string name="login1_msg">Enter your account information for your existing TextChange account</string>
	<string name="login_email">Email</string>
	<string name="login_name">Name</string>
	<string name="login_phone">Phone</string>
	<string name="login_pass">Password</string>
	<string name="login_login">Login</string>
	
	<string name="save_changes">Save Changes</string>
	<string name="see_ads">See Ads</string>
	<string name="sign_out">Sign Out</string>
	<string name="title_activity_dept">Departments</string>
	<string name="title_activity_course">Courses</string>
	<string name="title_activity_login">Login</string>
	<string name="title_activity_signup">SignUp</string>
	<string name="title_activity_searchresults">Search Results</string>
	<string name="title_activity_userhome">My Home</string>
	<string name="title_activity_userprofile">My Profile</string>
	<string name="title_activity_userads">My Ads</string>
	<string name="title_activity_useraddetails">Details</string>
	<string name="title_activity_addetails">Details</string>
	<string name="myprofile">My Profile</string>
	
	<string name="ad_published">Published on:</string>
	<string name="ad_forcourse">For course:</string>
	<string name="contactseller">Contact Seller</string>
	<string name="deletead">Delete Ad</string>
	    
	<string name="sendemail">Send Email</string>
	<string name="callsell">Call Seller</string>
	
</resources>
