<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/PaleGoldenrod" >
    
    <TextView
        android:id="@+id/register_reg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/register_reg_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/register_reg_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif_light"
        android:padding="10dp"
        android:text="@string/register_reg_msg"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/register_email_req"
        android:layout_width="270dp"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:layout_height="25dip"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:ems="10"
        android:gravity="center"
        android:background="@drawable/textlines"
        android:hint="@string/register_email_req" />
    
    <EditText android:id="@+id/register_name_req"
        android:layout_width="270dp"
        android:layout_height="25dip"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:singleLine="true"
        android:gravity="center"
        android:background="@drawable/textlines"
        android:hint="@string/register_name_req" />
   
     <EditText android:id="@+id/register_phone_num"
        android:layout_width="270dp"
        android:layout_height="25dip"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        android:inputType="phone"
        android:gravity="center"
        android:background="@drawable/textlines"
        android:hint="@string/register_phone_num" />
		
     <EditText android:id="@+id/register_pass"
        android:layout_width="270dp"
        android:layout_height="25dip"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        android:inputType="textPassword"
        android:gravity="center"
        android:singleLine="true"
        android:background="@drawable/textlines"
        android:hint="@string/register_pass" />

    <EditText android:id="@+id/register_pass_re"
        android:layout_width="270dp"
        android:layout_height="25dip"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        android:inputType="textPassword"
        android:gravity="center"
        android:singleLine="true"
        android:background="@drawable/textlines"
        android:hint="@string/register_pass_re" />
		
	<LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_weight="1"
    	android:layout_height="0dip"
    	android:gravity="center"
    	android:singleLine="true"
    	android:orientation="vertical" >    
		
     <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dip"
        android:background="@color/PaleGoldenrod"
        android:text="@string/register_reg"
        android:textColor="@color/SteelBlue"
        android:textSize="18sp" 
        android:drawableBottom="@drawable/sign_up"
        android:textStyle="bold"/>
	</LinearLayout>  
</LinearLayout>