<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PaleGoldenrod"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/register_req"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/register_req"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/register_req_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif_light"
        android:padding="10dp"
        android:text="@string/register_req_msg"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/dw_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif_light"
        android:padding="10dp"
        android:text="@string/dontworry_msg"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
<LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_weight="1"
    	android:layout_height="0dip"
    	android:gravity="center"
    	android:orientation="vertical" >    
     <Button
        android:id="@+id/signup_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dip"
        android:background="@color/PaleGoldenrod"
        android:text="@string/signup_msg"
        android:textColor="@color/SteelBlue"
        android:textStyle="bold"
        android:textSize="15sp" />
 </LinearLayout>    
     
<LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_weight="1"
    	android:layout_height="0dip"
    	android:gravity="center|bottom"
    	android:orientation="vertical" >

    <Button
        android:id="@+id/login_msg"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dip"
        android:background="@color/PaleGoldenrod"
        android:text="@string/login_msg"
        android:textColor="@color/SteelBlue"
        android:textStyle="bold"
        android:textSize="15sp" />
   
</LinearLayout>        
</LinearLayout>