<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/PaleGoldenrod" >
 
 <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
 <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif_light"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="30dip"
        android:text="@string/login_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />   
    <Button
      android:id="@+id/user_email"
      android:layout_width="225dp"
      android:layout_height="25dip"
      android:layout_marginTop="30dip"
      android:singleLine="true" 
      android:gravity="center"
      android:layout_marginRight="-5dip"
      android:background="@color/PaleGoldenrod"
      />
</LinearLayout>
<LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
 <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif_light"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="30dip"
        android:text="@string/login_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />   
    <EditText
      android:id="@+id/user_name"
      android:layout_width="225dp"
      android:layout_height="25dip"
      android:layout_marginTop="30dip"
      android:singleLine="true" 
      android:gravity="center"
      android:inputType="text"
      android:layout_marginRight="-5dip"
      android:background="@color/PaleGoldenrod"
      />
</LinearLayout>
<LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
 <TextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif_light"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="30dip"
        android:text="@string/login_phone"
        android:textAppearance="?android:attr/textAppearanceMedium" />   
    <EditText
      android:id="@+id/user_phone"
      android:layout_width="225dp"
      android:layout_height="25dip"
      android:layout_marginTop="30dip"
      android:inputType="phone"
      android:gravity="center"
      android:singleLine="true" 
      android:layout_marginRight="-5dip"
      android:background="@color/PaleGoldenrod"
      />
    </LinearLayout>
     <Button
        android:id="@+id/save_changes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:layout_gravity="center_horizontal"
        android:background="@color/PaleGoldenrod"
        android:text="@string/save_changes"
        android:textColor="@color/SteelBlue"
        android:textSize="18sp"
        android:drawableTop="@drawable/ic_edit"
        android:textStyle="bold" />

     <Button
         android:id="@+id/see_ads"
         android:layout_width="198dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dip"
         android:layout_gravity="center_horizontal"
         android:background="@color/PaleGoldenrod"
         android:drawableTop="@drawable/ic_list"
         android:text="@string/see_ads"
         android:textColor="@color/SteelBlue"
         android:textSize="18sp"
         android:textStyle="bold" />

     <Button
         android:id="@+id/sign_out"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dip"
         android:layout_gravity="center_horizontal"
         android:background="@color/PaleGoldenrod"
         android:drawableTop="@drawable/ic_signout"
         android:text="@string/sign_out"
         android:textColor="@color/IndianRed"
         android:textSize="18sp"
         android:textStyle="bold" />
     
</LinearLayout>
