<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PaleGoldenrod"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" xmlns:android1="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/postButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/profileButton"
        android:layout_alignBottom="@+id/profileButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:background="@color/PaleGoldenrod"
        android:drawableTop="@drawable/ic_pushpin"
        android:onClick="postFrame"
        android:text="@string/postad" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/searchButton1"
        android:layout_alignBottom="@+id/searchButton1"
        android:layout_centerHorizontal="true"
        android:background="@color/PaleGoldenrod"
        android:drawableTop="@drawable/ic_person"
        android:onClick="loginFrame"
        android:text="@string/myprofile" />

    <Button
        android:id="@+id/searchButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="17dp"
        android:background="@color/PaleGoldenrod"
        android:drawableTop="@drawable/ic_search"
        android:onClick="searchFrame"
        android:text="@string/search" />

</RelativeLayout>