<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/PaleGoldenrod" >
<LinearLayout
        android:id="@+id/linearLayoutad1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
 <TextView
        android:id="@+id/addetails_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif_light"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="30dip"
        android:text="@string/ad_published"
        android:textSize="14sp" />   
    <Button
      android:id="@+id/ad_dateB"
      android:layout_width="225dp"
      android:layout_height="25dip"
      android:layout_marginTop="30dip"
      android:singleLine="true" 
      android:gravity="center"
      android:textSize="14sp"
      android:layout_marginRight="-5dip"
      android:background="@color/PaleGoldenrod"
      />
</LinearLayout>
<LinearLayout
        android:id="@+id/linearLayoutad2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
 <TextView
        android:id="@+id/addetails_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif_light"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip"
        android:text="@string/ad_forcourse"
        android:textSize="14sp" />   
    <Button
      android:id="@+id/ad_course"
      android:layout_width="225dp"
      android:layout_height="25dip"
      android:layout_marginTop="10dip"
      android:singleLine="true" 
      android:gravity="center"
      android:textSize="14sp"
      android:layout_marginRight="-5dip"
      android:background="@color/PaleGoldenrod"
      />
</LinearLayout>
<Button
      android:id="@+id/addetails_title"
      android:layout_width="225dp"
      android:layout_height="25dip"
      android:layout_marginLeft="20dip"
      android:layout_marginTop="50dip"
      android:gravity="left"
      android:singleLine="true" 
      android:text=""
      android:textSize="18sp"
      android:fontFamily="sans-serif"
      android:textStyle="bold"
      android:layout_marginRight="-5dip"
      android:background="@color/PaleGoldenrod"
      />
<Button
      android:id="@+id/addetails_isbn"
      android:layout_width="225dp"
      android:layout_height="25dip"
      android:layout_marginTop="10dip"
      android:layout_marginLeft="20dip"
      android:singleLine="true" 
      android:gravity="left"
      android:text=""
      android:textSize="14sp"
      android:fontFamily="sans-serif_light"
      android:layout_marginRight="-5dip"
      android:background="@color/PaleGoldenrod"
      />
<Button
      android:id="@+id/addetails_author"
      android:layout_width="225dp"
      android:layout_height="25dip"
      android:layout_marginTop="10dip"
      android:layout_marginLeft="20dip"
      android:singleLine="true" 
      android:gravity="left"
      android:text=""
      android:textSize="14sp"
      android:fontFamily="sans-serif_light"
      android:layout_marginRight="-5dip"
      android:background="@color/PaleGoldenrod"
      />
<Button
      android:id="@+id/addetails_price"
      android:layout_width="225dp"
      android:layout_height="25dip"
      android:layout_marginTop="50dip"
      android:layout_marginLeft="20dip"
      android:singleLine="true" 
      android:gravity="left"
      android:text=""
      android:textColor="@color/DarkGreen"
      android:textSize="14sp"
      android:fontFamily="sans-serif_light"
      android:layout_marginRight="-5dip"
      android:background="@color/PaleGoldenrod"
      />
<Button
      android:id="@+id/contact_seller"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dip"
      android:singleLine="true" 
      android:layout_gravity="center_horizontal"
      android:drawableTop="@drawable/ic_action_send_now"
      android:text="@string/contactseller"
      android:textColor="@color/SteelBlue"
      android:textSize="18sp"
      android:textStyle="bold"
      android:fontFamily="sans-serif_light"
      android:layout_marginRight="-5dip"
      android:background="@color/PaleGoldenrod"
      />



</LinearLayout>
